# cobalt

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
CobaltEngine/: CMakeLists.txt
CobaltEngine/src/Cobalt/: Core.cpp  Core.h
CobaltEngine/src/Cobalt/Core/: Application.cpp  Application.h  Base.h  Input.cpp  Input.h  KeyCode.h  Log.cpp  Log.h  Memory.h  MouseCode.h  Types.h  Window.cpp  Window.h
CobaltEngine/src/Cobalt/Events/: ApplicationEvent.h  Event.h  KeyEvent.h
CobaltEngine/src/Cobalt/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Samples/HelloCobalt/: CMakeLists.txt
Samples/HelloCobalt/src/: HelloCobalt.cpp
engine/: CMakeLists.txt
engine/include/: pch.h
engine/include/cobalt/: cobalt.h  core.h
engine/include/cobalt/core/: application.h  assert.h  base.h  core.h  event.h  event_dispatcher.h  log.h  platform_detection.h  window.h
engine/include/cobalt/events/: event_defs.h  key_event.h  mouse_event.h  window_close_event.h  window_resize_event.h
engine/include/cobalt/platform/windows/: windows_window.h
engine/src/: core.cpp
engine/src/core/: application.cpp  core.cpp  event_dispatcher.cpp  log.cpp  window.cpp
engine/src/platform/windows/: windows_window.cpp
samples/hello_cobalt/: CMakeLists.txt  main.cpp
